# simplecards

./: .gitignore  Cargo.toml  README.md  roadmap.md  roadmap.org
src/: main.rs  storage.rs  tui.rs  vocab.rs
