[package]
name = "simplecards"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
serde = { version = "*", features = ["derive"]}
serde_json = "*"
directories = "*"
